[workspace]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package]
name = "test-binary-features"
version = "0.0.2"
description = "Programmatic testing of Rust binary crate features"
keywords = [
    "test",
    "testing",
    "cargo",
    "binary",
    "integration",
]
categories = [
    "development-tools",
    "development-tools::testing",
]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true
repository = "https://github.com/scale-rs/test-binary-features"
authors = ["Peter Kehl <peter.kehl@gmail.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/ORG/PROJECT/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = []

[dependencies]
test-binary = "3.0.1"
thiserror = "1.0.48"
phantom_newtype = "0.2.0"

[dev-dependencies]

